--- a/SunFinder/app/build.gradle
+++ b/SunFinder/app/build.gradle
@@ -1,4 +1,9 @@
+plugins {
+    id "org.sonarqube" version "2.5"
+}
+
 apply plugin: 'com.android.application'
+apply plugin: 'org.sonarqube'
 
 android {
     compileSdkVersion 26
