--- a/SunFinder/gradle.properties
+++ b/SunFinder/gradle.properties
@@ -15,3 +15,8 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+systemProp.sonar.host.url=https://sonarcloud.io
+systemProp.sonar.organization=raphaelfelber-stud-hslu-github
+systemProp.sonar.projectKey=SunFinder:master
+systemProp.sonar.login=1476ae67ce26316c62fe212381ad102b04a2440e
