--- a/SunFinder/app/build.gradle
+++ b/SunFinder/app/build.gradle
@@ -33,5 +33,9 @@ dependencies {
     compile 'com.android.support:support-v4:26.+'
     compile 'com.android.support:recyclerview-v7:26.+'
     compile 'com.android.support:design:26.+'
+    compile 'com.squareup.retrofit2:retrofit:2.3.+'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.+'
+    compile 'org.apache.commons:commons-lang3:3.6+'
+    compile 'joda-time:joda-time:2.9.+'
     testCompile 'junit:junit:4.12'
 }
