--- a/SunFinder/app/src/main/AndroidManifest.xml
+++ b/SunFinder/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="ch.msengineering.sunfinder">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -12,14 +14,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".LocationListActivity"
-            android:label="@string/app_name"
+            android:name=".GeoListActivity"
+            android:label="@string/title_geo_list"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".LocationListActivity"
+            android:label="@string/title_location_list"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="ch.msengineering.sunfinder.GeoListActivity" />
         </activity>
         <activity
             android:name=".LocationDetailActivity"
