--- a/SunFinder/app/build.gradle
+++ b/SunFinder/app/build.gradle
@@ -37,5 +37,9 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.+'
     compile 'org.apache.commons:commons-lang3:3.6+'
     compile 'joda-time:joda-time:2.9.+'
+    compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
     testCompile 'junit:junit:4.12'
 }
+
+apply plugin: 'com.google.gms.google-services'
