--- a/SunFinder/app/build.gradle
+++ b/SunFinder/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.+'
     compile 'org.apache.commons:commons-lang3:3.6+'
     compile 'joda-time:joda-time:2.9.+'
+    compile 'com.squareup.picasso:picasso:2.5.+'
     testCompile 'junit:junit:4.12'
 }
