--- a/SunFinder/gradle.properties
+++ b/SunFinder/gradle.properties
@@ -18,5 +18,6 @@ org.gradle.jvmargs=-Xmx1536m
 
 systemProp.sonar.host.url=https://sonarcloud.io
 systemProp.sonar.organization=raphaelfelber-stud-hslu-github
+systemProp.sonar.projectName=SunFinder
 systemProp.sonar.projectKey=SunFinder:master
 systemProp.sonar.login=1476ae67ce26316c62fe212381ad102b04a2440e
