--- a/SunFinder/gradle.properties
+++ b/SunFinder/gradle.properties
@@ -21,3 +21,4 @@ systemProp.sonar.organization=raphaelfelber-stud-hslu-github
 systemProp.sonar.projectName=SunFinder
 systemProp.sonar.projectKey=SunFinder:master
 systemProp.sonar.login=1476ae67ce26316c62fe212381ad102b04a2440e
+systemProp.sonar.cpd.exclusions=**/api/*.java
