--- a/SunFinder/app/src/main/AndroidManifest.xml
+++ b/SunFinder/app/src/main/AndroidManifest.xml
@@ -13,14 +13,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".GeoListActivity"
-            android:label="@string/geo_list_title"
-            android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".GeoListActivity"
+            android:label="@string/geo_list_title"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="ch.msengineering.sunfinder.WelcomeActivity" />
         </activity>
         <activity
             android:name=".LocationListActivity"
