Added: A little bit of coverage

--- a/SunFinder/gradle.properties
+++ b/SunFinder/gradle.properties
@@ -22,3 +22,4 @@ systemProp.sonar.projectName=SunFinder
 systemProp.sonar.projectKey=SunFinder:master
 systemProp.sonar.login=1476ae67ce26316c62fe212381ad102b04a2440e
 systemProp.sonar.cpd.exclusions=**/api/*.java
+systemProp.sonar.jacoco.reportPath=build/jacoco/testDebugUnitTest.exec
