--- a/SunFinder/app/build.gradle
+++ b/SunFinder/app/build.gradle
@@ -48,12 +48,13 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.+'
     compile 'com.google.firebase:firebase-database:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7' //Current Version is 1.0.2
     testCompile 'junit:junit:4.12'
 }
 
 apply plugin: 'com.google.gms.google-services'
 
+//Used from here, has further information of how to add instrumentation tests: https://overflow.buffer.com/2017/01/16/android-test-sonarqube/
 task createTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest']) {
     group = "Reporting"
 
